# satysfi-sexp

./: README.md  Satyristes  package.json  satysfi-sexp.opam
.github/workflows/: build.yml
__test__/: README.md  regression.test.js  test.saty
__test__/__snapshots__/: regression.test.js.snap
src/: atom.satyg  sexp.satyg  std-atom.satyg
test/: log.satyg  sexp.saty  std-atom.saty
