opam-version: "2.0"
name: "satysfi-sexp"
version: "0.1.0"
synopsis: "SATySFi S-expression library"
description: """
A SATySFi library for S-expression.

This requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "Taichi Uemura <t.uemura00@gmail.com>"
authors: "Taichi Uemura <t.uemura00@gmail.com>"
license: "MIT"
homepage: "https://github.com/uemurax/satysfi-sexp"
bug-reports: "https://github.com/uemurax/satysfi-sexp/issues"
dev-repo: "git+https://github.com/uemurax/satysfi-sexp.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-base" {>= "1.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "sexp"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
